--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -41,11 +41,11 @@
                         <h1 class="primary-color">{{ product.name }}</h1>
                     </div>
                     <div class="col-12">
-                        <span class="fa fa-star fa-lg checked"></span>
-                        <span class="fa fa-star fa-lg checked"></span>
-                        <span class="fa fa-star fa-lg checked"></span>
-                        <span class="fa fa-star fa-lg unchecked"></span>
-                        <span class="fa fa-star fa-lg unchecked"></span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                     </div>
                     <div class="col-12 my-2">
                         {% include 'update_favorite.html' %}
