--- a/templates/home.html
+++ b/templates/home.html
@@ -5,11 +5,11 @@
 {% endblock %}
 {% block content %}
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
-        <div class="d-grid m-auto h-100 w-100 align-content-start gap-3 p-3">
-            <div class="row d-flex flex-wrap w-100 rounded-1 position-relative">
-                <div class="col-1 arrow-icon left-arrow btn btn-primary position-absolute" id="left-arrow">
+        <div class="d-grid m-auto h-100 w-100 position-relative align-content-start gap-3 p-3">
+            <div class="col-1 arrow-icon left-arrow btn btn-primary position-absolute" id="left-arrow">
                     <i class="fa-solid fa-arrow-left"></i>
                 </div>
+            <div class="row d-flex flex-wrap w-100 rounded-1 position-relative">
                 <div class="d-flex mx-auto overflow-x-hidden col-11 py-2" id="categories-container">
                     <div class="d-flex categories-wrapper">
                         {% for key, value in categories %}
@@ -18,17 +18,17 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div class="arrow-icon right-arrow btn btn-primary position-absolute" id="right-arrow">
+            </div>
+            <div class="arrow-icon right-arrow btn btn-primary position-absolute" id="right-arrow">
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
-                <div class="d-flex col-12 ps-4" id="content">
+            <div class="d-flex col-12 ps-4" id="content">
                     <div class="d-flex w-100 flex-wrap">
                         {% for product in products %}
                             {% include 'product_card.html' %}
                         {% endfor %}
                     </div>
                 </div>
-            </div>
         </div>
     </div>
     <script>
