--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -10,11 +10,8 @@
                 <li class="hover item">
                     <a href="/account" class="link"><i class="fa fa-user"></i> Account </a>
                 </li>
-                <li class="hover">
-                    <a href="/favorite"><i class="fa fa-bookmark"></i> Saved Products </a>
-                </li>
-                <li class="hover">
-                    <a href="/followed"><i class="fa fa-bookmark"></i> Saved Creators </a>
+                <li class="hover item">
+                    <a href="/favorite" class="link"><i class="fa fa-bookmark"></i> Saved Products </a>
                 </li>
                 <hr class="border-0 w-75 align-self-center m-3" style="background-color: #E8DCCD; height:3px;">
                 <h6 class="ps-3" style="color:#E8DCCD"> Storefront </h6>
