--- a/templates/cart.html
+++ b/templates/cart.html
@@ -40,7 +40,7 @@
                                 <div class="col-12 text-center">${{ item.total_price }}</div>
                             </div>
                             <div class="align-items-center col-12 col-md-1 d-flex justify-content-center">
-                                <i class="fa-solid text-danger fa-trash"></i>
+                                <a href={% url 'removeFromCart' product_id=item.product.productId %}><i class="fa-solid text-danger fa-trash"></i></a>
                             </div>
                         </div>
                     {% endfor %}
