--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -8,35 +8,32 @@
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
         <div class="m-auto h-100 w-100 gap-3 p-3">
             <div class="row container mx-auto flex-wrap w-100 w-lg-75">
-                <div class="col-12 col-md-6 h-100 px-3">
-                    <div class="d-flex flex-column position-relative w-100">
-                        <div class="row d-flex w-100 mx-0" id="slideContainer" style="max-height:300px">
+                <div class="col-12 col-md-6 h-100">
+                    <div class="pe-2 position-relative">
+
+                        {% for image in product.images %}
+                            <div class="mySlides">
+                                <img src="{{ image.image.url }}" style="width:100%">
+                            </div>
+                        {% endfor %}
+
+                        <!-- Next and previous buttons -->
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+                        <!-- Image text -->
+                        <div class="caption-container">
+                            <p id="caption"></p>
+                        </div>
+
+                        <!-- Thumbnail images -->
+                        <div class="row">
                             {% for image in product.images %}
-                                <div class="mySlides d-flex w-100 h-100 justify-content-center align-content-center"
-                                     style="max-height: inherit">
-                                    <img src="{{ image.image.url }}" style="object-fit: contain">
+                                <div class="column">
+                                    <img class="demo cursor" src="{{ image.image.url }}" style="width:100%"
+                                         onclick="currentSlide(1)" alt="{{ image.name }}">
                                 </div>
                             {% endfor %}
-
-                            <!-- Next and previous buttons -->
-                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                        </div>
-                        <div class="row d-flex">
-                            <!-- Image text -->
-                            <div class="caption-container">
-                                <p id="caption"></p>
-                            </div>
-
-                            <!-- Thumbnail images -->
-                            <div class="row">
-                                {% for image in product.images %}
-                                    <div class="column">
-                                        <img class="demo cursor" src="{{ image.image.url }}" style="width:100%"
-                                             onclick="currentSlide(1)" alt="{{ image.name }}">
-                                    </div>
-                                {% endfor %}
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -45,11 +42,11 @@
                         <h1 class="primary-color">{{ product.name }}</h1>
                     </div>
                     <div class="col-12">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <span class="fa fa-star fa-lg checked"></span>
+                        <span class="fa fa-star fa-lg checked"></span>
+                        <span class="fa fa-star fa-lg checked"></span>
+                        <span class="fa fa-star fa-lg unchecked"></span>
+                        <span class="fa fa-star fa-lg unchecked"></span>
                     </div>
                     <div class="col-12 my-2">
                         {% include 'update_favorite.html' %}
@@ -68,9 +65,9 @@
                     </div>
                     <div>
                         <div class="d-flex mt-3">
-{#                            <button class="col-12 btn-primary btn" id="product_review"#}
-{#                                    value="{{ product.productId }}">Leave a review!#}
-{#                            </button>#}
+                            {#                            <button class="col-12 btn-primary btn" id="product_review"#}
+                            {#                                    value="{{ product.productId }}">Leave a review!#}
+                            {#                            </button>#}
                         </div>
                         <table class="primary-color">
                             <tr>
@@ -98,22 +95,22 @@
                     <div class="col-6">
                         <h5 class="primary-color my-1">You've previously purchased this product</h5>
                         <button class="col-6 btn-primary btn" id="product_review"
-                                    value="{{ product.productId }}">Leave a review!
+                                value="{{ product.productId }}">Leave a review!
                         </button>
-{#                        <button id="toggle" class="btn btn-md btn-light my-1" onclick="toggleReview()">Write a Review</button>#}
-{#                        <div id="reviewDiv" class="position-relative w-100" style="display: none">#}
-{#                            <form id="reviewForm">#}
-{#                                <label for="subject" class="primary-color"></label>#}
-{#                                <input id="subject" type="text" placeholder="Subject"#}
-{#                                       class="w-100 p-1 btn-primary" style="border-radius: 5px"/>#}
-{#                                <br>#}
-{#                                <label for="review" class="primary-color"></label>#}
-{#                                <textarea id="review" type="text" rows="4" cols="50" placeholder="Write Review"#}
-{#                                          class="w-100 p-1 btn-primary"#}
-{#                                          style="border-radius: 5px"></textarea>#}
-{#                            </form>#}
-{#                            #}
-{#                        </div>#}
+                        {#                        <button id="toggle" class="btn btn-md btn-light my-1" onclick="toggleReview()">Write a Review</button>#}
+                        {#                        <div id="reviewDiv" class="position-relative w-100" style="display: none">#}
+                        {#                            <form id="reviewForm">#}
+                        {#                                <label for="subject" class="primary-color"></label>#}
+                        {#                                <input id="subject" type="text" placeholder="Subject"#}
+                        {#                                       class="w-100 p-1 btn-primary" style="border-radius: 5px"/>#}
+                        {#                                <br>#}
+                        {#                                <label for="review" class="primary-color"></label>#}
+                        {#                                <textarea id="review" type="text" rows="4" cols="50" placeholder="Write Review"#}
+                        {#                                          class="w-100 p-1 btn-primary"#}
+                        {#                                          style="border-radius: 5px"></textarea>#}
+                        {#                            </form>#}
+                        {#                            #}
+                        {#                        </div>#}
                     </div>
                 </div>
             {% endif %}
@@ -121,13 +118,13 @@
     </div>
     <script>
         function toggleReview() {
-                let reviewForm = document.getElementById('reviewDiv');
-                let leaveReviewBtn = document.getElementById('leaveReviewBtn');
+            let reviewForm = document.getElementById('reviewDiv');
+            let leaveReviewBtn = document.getElementById('leaveReviewBtn');
 
-                reviewForm.style.display = reviewForm.style.display === 'none' ? 'block' : 'none';
-                reviewForm.disabled = !reviewForm.disabled;
-                leaveReviewBtn.innerHTML = leaveReviewBtn.innerHTML === 'Write a Review' ? 'Cancel' : 'Write a Review';
-            }
+            reviewForm.style.display = reviewForm.style.display === 'none' ? 'block' : 'none';
+            reviewForm.disabled = !reviewForm.disabled;
+            leaveReviewBtn.innerHTML = leaveReviewBtn.innerHTML === 'Write a Review' ? 'Cancel' : 'Write a Review';
+        }
 
         // Define a function to handle the button click event
         function redirectToReviewPage() {
@@ -144,6 +141,5 @@
         // Attach the redirectToReviewPage function to the button's click event
         document.getElementById('product_review').addEventListener('click', redirectToReviewPage);
     </script>
-{#    <script src="{% static 'js/product-detail.js' %}"></script>#}
+    <script src="{% static 'js/product-detail.js' %}"></script>
 {% endblock %}
-
