moved register.html toast div to a better location so it displays properly

--- a/templates/register.html
+++ b/templates/register.html
@@ -29,13 +29,12 @@
         </div>
     </div>
     <div class="container h-100 mx-auto" id="main">
-        <div class="row toast w-100" id="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="3000">
-            <div class="toast-body text-center text-white">
-
-            </div>
-        </div>
         <div class="row d-flex justify-content-center align-items-center w-100 h-100">
+            <div class="row toast w-100" id="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="3000">
+                <div class="toast-body text-center text-white"></div>
+            </div>
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+
                 <div>
                     <div class="p-3 text-center">
                         <h3 class="primary-color mb-5">Register</h3>
