--- a/templates/review_product.html
+++ b/templates/review_product.html
@@ -1,11 +1,23 @@
 {% extends 'base.html' %}
+{% block head %}
+    <style>
+        .checked {
+            color: orange;
+        }
+
+        .unchecked {
+            color: grey;
+        }
+    </style>
+{% endblock %}
 {% load static %}
 {% block content %}
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
         <div class="m-auto h-100 w-100 gap-3 p-3">
             <div class="container mx-auto flex-wrap w-100 w-lg-75">
                 <div class="col-12 col-md-6 d-flex fit-content flex-wrap px-2">
-                    <div class="row toast w-100" id="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="3000">
+                    <div class="row toast w-100" id="toast" role="alert" aria-live="assertive" aria-atomic="true"
+                         data-delay="3000">
                         <div class="toast-body text-center text-white"></div>
                     </div>
                     <div class="col-12 mb-2 pe-5">
@@ -21,22 +33,22 @@
                         <span class="primary-color">{{ username }}</span>
                     </div>
                     <div class="col-12 pe-5 mb-2">
-                        <label for="rating" class="col-12 col-lg-4 primary-color">Your Rating: </label>
-                        <select id="rating" name="rating">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                        </select>
+                        <label class="col-12 col-lg-4 primary-color">Your Rating: </label>
+                        <i class="star fa fa-star fa-lg fa-regular unchecked" onclick="updateRating(1)" onmouseenter="mouseOver(1)" onmouseleave="mouseOff()"></i>
+                        <i class="star fa fa-star fa-lg fa-regular unchecked" onclick="updateRating(2)" onmouseenter="mouseOver(2)" onmouseleave="mouseOff()"></i>
+                        <i class="star fa fa-star fa-lg fa-regular unchecked" onclick="updateRating(3)" onmouseenter="mouseOver(3)" onmouseleave="mouseOff()"></i>
+                        <i class="star fa fa-star fa-lg fa-regular unchecked" onclick="updateRating(4)" onmouseenter="mouseOver(4)" onmouseleave="mouseOff()"></i>
+                        <i class="star fa fa-star fa-lg fa-regular unchecked" onclick="updateRating(5)" onmouseenter="mouseOver(5)" onmouseleave="mouseOff()"></i>
                     </div>
                     <div class="col-12 d-flex flex-wrap my-2">
                         <label for="comment" class="col-12 primary-color">Your review:</label>
-                        <div contenteditable="true" id="comment" class="col-12 p-2 fit-content primary-color border"></div>
+                        <div contenteditable="true" id="comment"
+                             class="col-12 p-2 fit-content primary-color border"></div>
                     </div>
 
                     <div class="col-12 d-flex mt-3">
-                        <button type="submit" id="review-product" class="col-12 btn-primary btn">Leave a review!</button>
+                        <button type="submit" id="review-product" class="col-12 btn-primary btn">Leave a review!
+                        </button>
                     </div>
                 </div>
             </div>
