Added rating display to storefront.html and changed input css for product-creation.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,13 @@
     width: fit-content;
 }
 
+.input{
+    background-color: transparent !important;
+        color: #e3d7c9 !important;
+        border: solid 1px #e3d7c9;
+        border-radius: 7px;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
