--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
             <i class="fa fa-bars  fa-md"></i>
         </button>
     </div>
-    <div class="col-lg-1 col-sm-1">
+    <div class="col-lg-2 col-sm-1">
         <a href="/" class="link"><img style="max-width: 25px;padding-bottom: 3px"  src="{% static 'icons/favicon.ico' %}"> <span>ShopSavvy</span> </a>
     </div>
 
@@ -66,7 +66,7 @@
             </div>
         </form>
     </div>
-    <div class="col-lg-1 col-sm-1 offset-lg-2 d-flex ms-auto">
+    <div class="col-lg-1 col-sm-1 offset-lg-2 d-flex ms-auto me-2">
         <div class="col">
             {% if user.is_authenticated %}
                 <a href="/logout" class="hover btn btn-dark btn-sm d-inline" id="loginBtn">Logout</a>
