--- a/templates/storefront.html
+++ b/templates/storefront.html
@@ -5,11 +5,17 @@
 {% endblock %}
 {% block content %}
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
-        <div class="row d-flex mx-auto w-100 position-relative" style="height: 300px;">
-            <img id="bannerDisplay" src="{{ store.bannerImage.url }}" class="p-0 w-100 h-100" alt="Banner">
+        <div class="row d-flex mx-auto w-100 position-relative" style="height: 300px;background-color: gray">
+            <img id="bannerDisplay" src="
+                    {% if store.bannerImage %}{{ store.bannerImage.url }}{% else %}{% static 'images/default_banner.jpg' %} {% endif %}"
+                 class="w-100 h-100 p-0 object-fit-cover" alt="Banner">
+
             <div class="d-block justify-content-center align-items-center position-absolute p-0 z-1"
                  style="height:150px; width: 150px; left:10px; top:10px;" id="logo">
-                <img id="logoDisplay" src="{{ store.logoImage.url }}" alt="Logo" class="w-100 h-100">
+                <img id="logoDisplay" src="
+                        {% if store.logoImage %}{{ store.logoImage.url }}{% else %}{% static 'images/default_logo.jpg' %}{% endif %}"
+                     alt="Logo"
+                     class="w-100 h-100">
                 <div id="editLogoBtnContainer"
                      class="d-none justify-content-center align-items-center position-absolute z-1"
                      style="height:150px; width: 150px; left:0px; top:0px;" id="logo">
@@ -39,22 +45,26 @@
         </div>
         <div class="d-flex flex-wrap col-12 mt-2">
             <h1 class="col-4"><input type="text" class="px-1 primary-color" id="storeName"
-                       value="{{ store.name }}" readonly></h1>
+                                     value="{{ store.name }}" readonly></h1>
             <div class="col-lg-5">
                 <button type="submit" id="confirm" class="hover m-2 btn btn-primary"
-                         disabled hidden>Confirm Changes
+                        disabled hidden>Confirm Changes
                 </button>
                 <button type="button" id="cancel" class="hover m-2 btn btn-primary"
-                         onclick="cancelEditable()" disabled hidden>
+                        onclick="cancelEditable()" disabled hidden>
                     Cancel
                 </button>
             </div>
             <div class="d-flex col-3 justify-content-end">
                 <a href="{% url 'AddProductView' store_id=store.storeId %}" class="hover btn m-2 btn-primary"
-                style="max-width: 300px; max-height: 40px" id="createBtn"> Create Product</a>
+                   style="max-width: 300px; max-height: 40px" id="createBtn"> Create Product</a>
             </div>
             <div class="col-lg-9">
-                <p class="ps-3"><div contenteditable="true" type="text" class="px-1 primary-color w-100" id="storeDescription" readonly>{{ store.description }}" </div></p>
+                <p class="ps-3">
+                <div contenteditable="true" type="text" class="px-1 primary-color w-100" id="storeDescription"
+                     readonly>{{ store.description }}
+                </div>
+                </p>
             </div>
         </div>
         <div class="row d-flex flex-grow-1 my-2 w-100 h-100 m-0 position-relative">
@@ -78,10 +88,10 @@
                                     <div class="product-name col-12 col-md-2">{{ product.name }}</div>
                                     <div class="col-12 col-md-2">{{ product.qoh }}</div>
                                     <div class="col-12 col-md-2">{{ product.price }}</div>
-                                    <div class="col-12 col-md-3 rating">⭐⭐⭐⭐</div>
+                                    <div class="col-12 col-md-3 rating">{% include 'rating_average.html' %}</div>
                                     <div class="col-12 col-md-3 d-flex p-0">
-                                        <button class="col-6 bg-danger" data-productId="{{ product.productId }}">
-                                            Remove
+                                        <button class="col-6 bg-danger " data-productId="{{ product.productId }}">
+                                            <i class="fa fa-trash"> </i>
                                         </button>
                                         <div class="col-6 px-auto">
                                             <a href="{% url 'EditProductView' product_id=product.productId %}"
@@ -95,7 +105,8 @@
 
                             {% endfor %}
                         {% else %}
-                            <h3 class="primary-color text-center">You don't have any products.... Add some by clicking the Create Product Button</h3>
+                            <h3 class="primary-color text-center">You don't have any products.... Add some by clicking
+                                the Create Product Button</h3>
                         {% endif %}
 
                         </div>
@@ -120,7 +131,7 @@
                                     <div class="col-12 col-md-3">{{ order.shippingAddress }}</div>
                                     <div class="col-12 col-md-3">
                                         {% for item in order.get_order_items %}
-                                            <div>{{ item.product.name }}                x{{ item.quantity }}</div>
+                                            <div>{{ item.product.name }} x{{ item.quantity }}</div>
                                         {% endfor %}
                                     </div>
                                     <div class="col-12 col-md-2">${{ order.order_summary.subtotal }}</div>
@@ -128,7 +139,8 @@
 
                             {% endfor %}
                         {% else %}
-                            <h3 class="primary-color text-center">You don't have any products.... Add some by clicking the Create Product Button</h3>
+                            <h3 class="primary-color text-center">You don't have any products.... Add some by clicking
+                                the Create Product Button</h3>
                         {% endif %}
 
                         </div>
@@ -151,10 +163,11 @@
                         </label>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn hover" data-bs-dismiss="modal"
+                        <button type="button" class="btn btn-primary hover" data-bs-dismiss="modal"
                                 onclick="document.getElementById('logoInput').value=''">Close
                         </button>
-                        <button type="button" class="btn hover" data-bs-dismiss="modal">Save changes</button>
+                        <button type="button" class="btn btn-primary hover" data-bs-dismiss="modal">Save changes
+                        </button>
                     </div>
                 </div>
             </div>
@@ -174,10 +187,11 @@
                         </label>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn hover" data-bs-dismiss="modal"
+                        <button type="button" class="btn btn-primary hover" data-bs-dismiss="modal"
                                 onclick="document.getElementById('bannerInput').value=''">Close
                         </button>
-                        <button type="button" class="btn hover" data-bs-dismiss="modal">Save changes</button>
+                        <button type="button" class="btn btn-primary hover" data-bs-dismiss="modal">Save changes
+                        </button>
                     </div>
                 </div>
             </div>
