--- a/templates/product-creation.html
+++ b/templates/product-creation.html
@@ -74,20 +74,20 @@
                         </div>
                         <div class="col-12 mb-2 pe-5">
                             <label for="product-name" class="col-12 col-lg-4 primary-color">Product Name:</label>
-                            <input id="product-name" type="text" class="col-12 col-lg-7 p-1 input"/>
+                            <input id="product-name" type="text" class="col-12 col-lg-7 btn p-0 btn-primary"/>
                         </div>
                         <div class="col-12 pe-5 mb-2">
                             <label for="product-price" class="col-12 col-lg-4 primary-color">Price: </label>
-                            <input id="product-price" class="col-12 col-lg-7 p-1 input" type="number"/>
+                            <input id="product-price" class="col-12 col-lg-7 btn p-0 btn-primary" type="number"/>
                         </div>
                         <div class="col-12 pe-5 mb-2">
                             <label for="product-qoh" class="col-12 col-lg-4 primary-color">Quantity On Hand: </label>
-                            <input id="product-qoh" class="col-12 col-lg-7 p-1 input" type="number"/>
+                            <input id="product-qoh" class="col-12 col-lg-7 btn p-0 btn-primary" type="number"/>
                         </div>
                         <div class="col-12 d-flex flex-wrap my-2">
                             <label for="product-description" class="col-12 primary-color">Product Description</label>
                             <div contenteditable="true" id="product-description"
-                                 class="col-12 p-2 fit-content input"></div>
+                                 class="col-12 p-2 fit-content primary-color border"></div>
                         </div>
 
                         <div class="col-12 d-flex mt-3">
