--- a/templates/storefront.html
+++ b/templates/storefront.html
@@ -125,8 +125,6 @@
                                 {% endfor %}
                             </div>
                         {% endif %}
-
-                        </div>
                     </div>
                 </div>
                 <div class="container col-12">
@@ -180,11 +178,10 @@
                         </label>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary hover" data-bs-dismiss="modal"
+                        <button type="button" class="btn hover" data-bs-dismiss="modal"
                                 onclick="document.getElementById('logoInput').value=''">Close
                         </button>
-                        <button type="button" class="btn btn-primary hover" data-bs-dismiss="modal">Save changes
-                        </button>
+                        <button type="button" class="btn hover" data-bs-dismiss="modal">Save changes</button>
                     </div>
                 </div>
             </div>
@@ -204,11 +201,10 @@
                         </label>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary hover" data-bs-dismiss="modal"
+                        <button type="button" class="btn hover" data-bs-dismiss="modal"
                                 onclick="document.getElementById('bannerInput').value=''">Close
                         </button>
-                        <button type="button" class="btn btn-primary hover" data-bs-dismiss="modal">Save changes
-                        </button>
+                        <button type="button" class="btn hover" data-bs-dismiss="modal">Save changes</button>
                     </div>
                 </div>
             </div>
