--- a/templates/product_card.html
+++ b/templates/product_card.html
@@ -20,7 +20,11 @@
     {% endif %}
     <div class="card-body">
         <div>
-            {% include 'rating_average.html' %}
+            <span class="fa fa-star fa-lg checked"></span>
+            <span class="fa fa-star fa-lg checked"></span>
+            <span class="fa fa-star fa-lg checked"></span>
+            <span class="fa fa-star fa-lg unchecked"></span>
+            <span class="fa fa-star fa-lg unchecked"></span>
         </div>
 
         {% include 'update_favorite.html' %}
